<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.main.FragmentLogin">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/m500"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/login_label"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_form">

            <TextView
                android:id="@+id/lesson_create_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp" />

            <EditText
                android:id="@+id/lesson_id_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:hint="@string/input_email_hint"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_create_label"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password_label"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_id_field"
                tools:layout_editor_absoluteX="30dp"/>

            <EditText
                android:id="@+id/password_lesson_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:hint="@string/input_password_hint"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/password_label"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_button"
                android:text="@string/login_button"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_lesson_field" />

            <TextView
                android:id="@+id/middle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/or_label"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <Button
                android:id="@+id/button_to_register"
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/middle_label" />

            <TextView
                android:id="@+id/to_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/reset_label"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#111111"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_to_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>