<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCreateLesson">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lesson_create_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_lesson_label"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp" />

            <EditText
                android:id="@+id/lesson_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/baseline_menu_book_24"
                android:drawablePadding="8dp"
                android:hint="@string/lesson_name_field"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_create_label"
                tools:layout_editor_absoluteX="30dp" />

            <EditText
                android:id="@+id/lesson_info_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_schedule_24"
                android:drawablePadding="8dp"
                android:hint="@string/lesson_info_field"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_name_field"
                tools:layout_editor_absoluteX="10dp" />

            <EditText
                android:id="@+id/lesson_id_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_123_24"
                android:drawablePadding="8dp"
                android:hint="@string/lesson_id_field"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_info_field"
                tools:layout_editor_absoluteX="10dp" />


            <EditText
                android:id="@+id/group_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/baseline_groups_24"
                android:drawablePadding="8dp"
                android:hint="@string/lesson_group_field"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lesson_id_field"
                tools:layout_editor_absoluteX="30dp" />

            <EditText
                android:id="@+id/password_lesson_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Введіть пароль доступу"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/group_name_field"
                tools:layout_editor_absoluteX="10dp" />

            <EditText
                android:id="@+id/repeat_lesson_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/lesson_repeat_field"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/password_lesson_field"
                tools:layout_editor_absoluteX="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/to_back_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/back_button"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/create_lesson_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/lesson_create_button"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>